--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     position:relative;
     displaY:block;
     cleaR:both;
-    height:20px;
+    height:30px;
     background:#eee;
 }
 .Slider .Bar
@@ -12,26 +12,19 @@
     top:0;
     left:0;
     height:100%;
-    background:#000;
+    background:#0e8a74;
+}
+.Test
+{
+    padding:1rem;
+    margin:2rem 1rem 3rem 1rem;
+    background:#3ddcce;
+    border-radius:10px;
 }
 .Test.Active .Slider .Bar
 {
     background:#F00;
 }
-.Test dl
-{
-    overflow:hidden;
-}
-.Test dd, .Test dt
-{
-    float:left;
-}
-.Test dd
-{
-    margin-right:1rem;
-    margin-left:0.5rem;
-}
-
 @keyframes animatedBackground
 {
 	from { background-position: 0 center; }
@@ -43,9 +36,11 @@
     float:left;
     width:50px;
     height:50px;
-    border:1px solid #000;
+    border:3px solid #3ddcce;
     border-radius:50px;
-    background:url(WaveLow.png) repeat-x left center;
+    margin-top:-3rem;
+    margin-bottom:1rem;
+    background:#fff url(WaveLow.png) repeat-x left center;
 }
 .Icon.Right
 {
